# realtime-screen-sharing-assistant

./: .gitignore  .pre-commit-config.yaml  README.md  app.js  config.py  index.html  main.py  pcm-processor.js  pyproject.toml  styles.css
